# norncore

./: .env.example  .gitignore  Cargo.toml
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: config.rs  dxwnd.rs  main.rs
