[package]
name = "norncore"
version = "0.1.0"
authors = ["callym"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ilhook = "1.0"
winapi = { version = "0.3", features = ["consoleapi", "minwindef", "winnt"] }

[workspace]
members = ["xtask"]
